# mgit

./: CMakeLists.txt
src/: Config.cpp  Config.h  GitLibLock.cpp  GitLibLock.h  MultiController.cpp  MultiController.h  OrderedMap.h  RepoOrchestrator.cpp  RepoOrchestrator.h  RepositoryController.cpp  RepositoryController.h  main.cpp
src/Data/: CommandData.h  Data.cpp  Data.h  StatusData.h
src/Displays/: Display.h  PipelineDisplay.cpp  PipelineDisplay.h  StatusDisplay.cpp  StatusDisplay.h
src/Nodes/: ControllerNode.h  CountedTaskControllerNode.cpp  CountedTaskControllerNode.h  SimpleControllerNode.cpp  SimpleControllerNode.h  SimpleTaskControllerNode.cpp  SimpleTaskControllerNode.h
src/Tasks/: BuildTask.cpp  BuildTask.h  CheckoutTask.cpp  CheckoutTask.h  CleanupTask.cpp  CleanupTask.h  CommandTask.cpp  CommandTask.h  PullPrepareTask.cpp  PullPrepareTask.h  PullTask.cpp  PullTask.h  PushTask.cpp  PushTask.h  StatusTask.cpp  StatusTask.h  Task.cpp  Task.h
